log/build_2025-05-16_15-28-17/vl53l8cx_ros/stderr.log
/home/susan/.local/lib/python3.10/site-packages/setuptools/_distutils/dist.py:289: UserWarning: Unknown distribution option: 'tests_require'
  warnings.warn(msg)
  File "/home/susan/osprey_ws/install/vl53l8cx_ros/lib/python3.10/site-packages/vl53l8cx_ros/px4_fused_sensors.py", line 35
    import numpy as np
    ^^^^^^
SyntaxError: invalid syntax

